--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,7 +64,7 @@ body{
 }
 
 /***********HEADER********************/
-.page-header{
+.page-header, .page-footer{
 	height: 67px;
 	width: 100%;
 	background-color: #f7c61d;
@@ -77,7 +77,7 @@ body{
 	margin: 0 auto;
 
 }
-.page-header .wrapper{
+.page-header .wrapper, .page-footer .wrapper{
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -94,4 +94,44 @@ body{
 	font-family: ProximaNova-Regular;
 	font-weight: 300;
 	padding: 0 67px; 
+}
+
+/****************FOOTER***************************************/
+.page-footer{
+	margin: 100px 0;
+}
+.page.footer>.wrapper>*{
+	width: 33.33%
+}
+.copyright{
+	font-family: ProximaNova-Regular;
+	font-weight: 300;
+	font-size: 13px;
+	color: #a78613;
+}
+
+.footer-nav a{
+	text-decoration: none;
+	color: #000;
+	display: flex;
+	justify-content:flex-start;
+}
+
+.social{
+	display: flex;
+	justify-content: flex-end;
+}
+.social a{
+	display: block;
+	width: 45px;
+	height: 45px;
+	border-radius: 50%;
+	background: #fff;
+	color: #f7c61d;
+	font-size: 24px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+	margin-left: 10px;
 }
