--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,11 +56,23 @@ table {
 		 url(../Exported Fonts/ProximaNova-Regular.ttf),format(truetype);
 	font-weight: 300;
 }
-
+@font-face {
+	font-family: ProximaNova-Bold;
+	src: url(../Exported Fonts/ProximaNova-Bold.woff),format(woff)
+		 url(../Exported Fonts/ProximaNova-Bold.ttf),format(truetype);
+	font-weight: bold;
+}
+@font-face {
+    font-family: Roboto;
+    src: url(../Exported Fonts/Roboto-Light.woff) format(woff),
+        url(../Exported Fonts/Roboto-Light.ttf) format(truetype);
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
 body{
 	font-family:Roboto; 
 	font-size: 16px;
-	line-height: 1.4;
 }
 
 /***********HEADER********************/
@@ -77,7 +89,7 @@ body{
 	margin: 0 auto;
 
 }
-.page-header .wrapper, .page-footer .wrapper{
+.page-header .wrapper, .page-footer .wrapper, .main .wrapper{
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -95,7 +107,112 @@ body{
 	font-weight: 300;
 	padding: 0 67px; 
 }
+/*********MAIN*************************/
+.main{
+	display: flex;
+}
+main{
+	width: 77%;
+}
+.right-sidebar{
+	width: 23%;
+}
+h2{
+	font-family: ProximaNova-Bold;
+	font-size: 24px;
+	margin: 40px 0 15px;
+	font-weight: bold;
+}
 
+article{
+	display: flex;
+	margin-bottom: 50px;
+}
+img{
+	width: 100%;
+}
+.article-left{
+	width: 30%;
+}
+.article-left img{
+	border-radius: 5px;
+}
+.article-right{
+	width: 70%;
+	display: flex;
+	flex-direction: column;
+	padding-left: 25px;
+	justify-content: space-between;
+}
+article h3{
+	font-family: ProximaNova-Regular;
+	font-size: 30px;
+	font-weight: 300;
+}
+.meta {
+	font-family: Roboto;
+	font-weight: 300;
+	color: #999;
+	font-size: 13px;
+}
+.meta span::after{
+	display: inline-block;
+	content: "|";
+	color: #999;
+	font-size: 13px;
+}
+.meta span:last-child::after{
+	display: none;
+}
+.category{
+	color: #e3b002;
+}
+.discription{
+	color: #555;
+	font-size: 16px;
+	font-family: Roboto;
+}
+.discription::after{
+	content: ">";
+	color: #e3b002;
+}
+.views::before{
+	content: '\f06e';
+	font-family: 'Font Awesome 5 Free';
+	font-size: 16px;
+	color: #999;
+	margin-right: 10px;
+}
+.views::after{
+	content: "|";
+	margin: 0 10px;
+}
+.comments::before{
+	content: '\f075';
+	font-family: 'Font Awesome 5 Free';
+	font-size: 16px;
+	color: #999;
+	margin-right: 10px;
+}
+.comments{
+	color: #e3b002;
+}
+.more{
+	width: 170px;
+	height: 42px;
+	display: block;
+	background: transparent;
+	color: #000;
+	font-size: 12px;
+	font-family: Roboto;
+	font-weight: bold;
+	text-transform: uppercase;
+	border: 1px solid #e3b002;
+	border-radius: 5px;
+	outline: none;
+	text-align: center;
+	margin: 0 auto;
+}
 /****************FOOTER***************************************/
 .page-footer{
 	margin: 100px 0;
