--- a/CSS/style.css
+++ b/CSS/style.css
@@ -285,9 +285,36 @@ aside.right-sidebar{
 	background-color: #f7c61d;
 	color: #fff;
 }
+.popular-news article{
+	flex-direction: column;
+	margin-bottom: 20px;
+}
+.popular-news h3{
+	font-size: 16px;
+	font-family: Roboto;
+	line-height: 1.2;
+	margin-top: 10px;
+}
+.popular-news h2{
+	font-family: Proxima;
+	font-size: 18px;
+	font-weight: bold;
+	display: flex;
+	white-space: nowrap;
+	align-items: center;
+}
+.popular-news h2::after{
+	content: '.';
+	font-size: 0;
+	display: block;
+	width: 100%;
+	height:1px;
+	border-top: 1px solid#e5e5e5;
+	margin-left: 20px
+}
 /****************FOOTER***************************************/
 .page-footer{
-	margin: 100px 0;
+	margin: 100px 0 0;
 }
 .page.footer>.wrapper>*{
 	width: 33.33%
