--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,7 +104,7 @@ body{
 	color: black;
 	font-family: ProximaNova-Regular;
 	font-weight: 300;
-	padding: 0 67px; 
+	padding: 0 35px; 
 }
 /*********MAIN*************************/
 .main>.wrapper{
@@ -169,7 +169,9 @@ article h3{
 .discription{
 	color: #555;
 	font-size: 16px;
-	font-family: Roboto;
+	font-family: Proxima;
+	font-weight: 300;
+	line-height: 1.6;
 }
 .discription::after{
 	content: ">";
