--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,7 +82,7 @@ body{
 	justify-content: space-around;
 	align-items: center;
 }
-.page-header nav ul{
+nav ul{
 	display: flex;
 	text-decoration: none;
 	color: #ffff;
@@ -113,13 +113,14 @@ body{
 .footer-nav a{
 	text-decoration: none;
 	color: #000;
+	padding: 0 18px;
 	display: flex;
 	justify-content:flex-start;
 }
 
 .social{
 	display: flex;
-	justify-content: flex-end;
+	
 }
 .social a{
 	display: block;
