--- a/CSS/style.css
+++ b/CSS/style.css
@@ -93,7 +93,7 @@ body{
 	justify-content: space-around;
 	align-items: center;
 }
-.page-header nav ul{
+nav ul{
 	display: flex;
 	text-decoration: none;
 	color: #ffff;
@@ -331,6 +331,7 @@ aside.right-sidebar{
 .footer-nav a{
 	text-decoration: none;
 	color: #000;
+	padding: 0 18px;
 	display: flex;
 	justify-content:flex-start;
 }
